--- a/src/code.less
+++ b/src/code.less
@@ -17,10 +17,11 @@ pre {
     padding: 1em;
     font-size: 80%;
     line-height: 1.5;
-    color: #41403E;
+    color: @primary;
     word-break: break-all;
     word-wrap: break-word;
-    background-color: lighten(@primary, 70%);
+    background-color: lighten(@primary, 73%);
     border: 1px solid lighten(@primary, 50%);
     border-radius: 3px;
+    overflow-x: auto; 
 }
