--- a/src/forms.less
+++ b/src/forms.less
@@ -21,6 +21,7 @@ input, select {
         display: inline-block;
         margin-bottom: .5rem;
     }
+    // TODO: make these classes implicit. We can find out what class to apply based on its type
     .paper-radio, .paper-check {
         display: block;
         margin-bottom: .5rem;
