--- a/src/styles.less
+++ b/src/styles.less
@@ -1,12 +1,4 @@
-// Why is box sizing not the default?
-// https://www.paulirish.com/2012/box-sizing-border-box-ftw/
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
+@import (less) "./boxreset.less";
 @import (less) "../node_modules/normalize.css/normalize.css";
 @import (less) "./colors.less";
 @import (less) "./fonts.less";
