Add block buttons, block inputs, and more paper-y <hr>

--- a/src/buttons.less
+++ b/src/buttons.less
@@ -20,6 +20,10 @@ button, .paper-btn {
         font-size: .75rem;
         padding: .5rem;
     }
+    &.btn-block {
+        display: block;
+        width: 100%;
+    }
     &:hover{
         .shadow-hover;
     }
