--- a/src/container.less
+++ b/src/container.less
@@ -4,6 +4,7 @@
 @xsmall-screen: ~"screen and (max-width: 480px)";
 
 .container {
+    width: 100%;
     max-width: 960px;
     position: relative;
     margin: 0 auto;
@@ -14,13 +15,28 @@
         width: 90%;
     }
 }
+.hr-after() {
+    text-align: center;
+    color: lighten(@primary, 30%);
+    display: block;
+    content: "~~~";
+    position: relative;
+    font-size: 1.5rem;
+}
 .section {
     margin-top: 1rem;
     margin-bottom: 2rem;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid lighten(@primary, 60%);
 }
-
+.section:after {
+    .hr-after;
+}
+hr {
+    border: 0;
+}
+hr:after {
+    .hr-after;
+    top: -.75rem;
+}
 .paper {
     border: 1px solid @primary-light;
     background-color: #FFF;
