adding dotted and dashed border classes

--- a/src/borders.less
+++ b/src/borders.less
@@ -56,3 +56,9 @@
 .border-white {
     border-color: #FFF;
 }
+.border-dashed{
+    border-style: dashed;
+}
+.border-dotted{
+    border-style:dotted;
+}
