--- a/src/styles.less
+++ b/src/styles.less
@@ -13,3 +13,4 @@
 @import (less) "./tables.less";
 @import (less) "./images.less";
 @import (less) "./utilities.less";
+@import (less) "./popovers.less";
