Adding more border styles, dashed, dotted, thich

--- a/src/borders.less
+++ b/src/borders.less
@@ -56,3 +56,12 @@
 .border-white {
     border-color: #FFF;
 }
+.border-dotted {
+    border-style: dotted;
+}
+.border-dashed {
+    border-style: dashed;
+}
+.border-thick {
+    border-width: 5px;
+}
