Move border size to just .border to prevent override on child borders

--- a/src/borders.less
+++ b/src/borders.less
@@ -1,3 +1,6 @@
+.border {
+    border: 2px solid @primary;
+}
 .border, .border-1, .child-borders > *:nth-child(6n+1) {
     border-top-left-radius: 255px 15px;
     border-top-right-radius: 15px 225px;
