Added default card, more types to come

--- a/src/styles.less
+++ b/src/styles.less
@@ -14,3 +14,4 @@
 @import (less) "./images.less";
 @import (less) "./utilities.less";
 @import (less) "./popovers.less";
+@import (less) "./cards.less";
