Added white-space to pre-tags

--- a/src/code.less
+++ b/src/code.less
@@ -23,5 +23,6 @@ pre {
     background-color: lighten(@primary, 73%);
     border: 1px solid lighten(@primary, 50%);
     border-radius: 3px;
-    overflow-x: auto; 
+    overflow-x: auto;
+    white-space: pre-wrap;
 }
