--- a/src/colors.less
+++ b/src/colors.less
@@ -13,36 +13,17 @@
 @warning-light: lighten(@warning, 30%);
 @danger-light: lighten(@danger, 45%);
 
-// Mixin to create colors from list
-.text-primary {
-    color: @primary;
-}
-.text-secondary {
-    color: @secondary;
-}
-.text-success {
-    color: @success;
-}
-.text-warning {
-    color: @warning;
-}
-.text-danger {
-    color: @danger;
-}
-.background {
-    &-primary {
-        background-color: @primary-light;
+@colors: primary, secondary, success, warning, danger;
+
+.make-text-color-classes(@i: length(@colors)) when (@i > 0) {
+    .make-text-color-classes(@i - 1);
+    @color: extract(@colors, @i);
+    .text-@{color} {
+        color: @@color;
     }
-    &-secondary {
-        background-color: @secondary-light;
-    }
-    &-success {
-        background-color: @success-light;
-    }
-    &-warning {
-        background-color: @warning-light;
-    }
-    &-danger {
-        background-color: @danger-light;
+    .background-@{color}{
+        color: ~"@{@{color}-light}";
     }
 }
+
+.make-text-color-classes();
