--- a/src/styles.less
+++ b/src/styles.less
@@ -15,3 +15,4 @@
 @import (less) "./utilities.less";
 @import (less) "./popovers.less";
 @import (less) "./cards.less";
+@import (less) "./badges.less";
