Fix border colour issue

--- a/src/borders.less
+++ b/src/borders.less
@@ -57,7 +57,7 @@
     .make-border-color-classes(@i - 1);
     @color: extract(@colors, @i);
     .border-@{color} {
-        color: @@color;
+        border-color: @@color;
     }
 }
 
