Fix background colour issue

--- a/src/colors.less
+++ b/src/colors.less
@@ -20,7 +20,7 @@
         color: @@color;
     }
     .background-@{color}{
-        color: ~"@{@{color}-light}";
+        background-color: ~"@{@{color}-light}";
     }
 }
 
