Add text-muted class

--- a/src/colors.less
+++ b/src/colors.less
@@ -31,6 +31,9 @@
 .text-danger {
     color: @danger;
 }
+.text-muted {
+    color: @muted;
+}
 .background {
     &-primary {
         background-color: @primary-light;
