Adding colours and hover:active to buttons

--- a/src/buttons.less
+++ b/src/buttons.less
@@ -1,15 +1,16 @@
-button, .paper-btn {
+button, .paper-btn, [type="button"] {
+    .shadow;
     align-self:center;
     background:transparent;
-    transition:all .5s ease;
+    transition:background-color .1s ease;
     color: @primary;
+    display: inline;
     outline:none;
     border:solid 2px @primary;
     .border;
     font-size: 1rem;
     padding: .75rem .75rem;
     cursor: pointer;
-    .shadow;
     &.btn-large {
         .shadow-large;
         font-size:2rem;
@@ -44,3 +45,19 @@ a {
         color: @primary;
     }
 }
+
+.make-button-color-classes(@i: length(@colors)) when (@i > 0) {
+    .make-button-color-classes(@i - 1);
+    @color: extract(@colors, @i);
+    button.btn-@{color}, .paper-btn.btn-@{color}, [type="button"].btn-@{color} {
+        border-color: @@color;
+        background-color: ~"@{@{color}-light}";
+        color: ~"@{@{color}-text}";
+        &:hover:active{
+            @darkcolour: ~"@{color}-light";
+            background-color: darken(@@darkcolour, 10%);
+        }
+    }
+}
+
+.make-button-color-classes();
