--- a/src/badges.less
+++ b/src/badges.less
@@ -1,4 +1,6 @@
 .badge {
+  .border;
+
   display: inline-block;
   padding: .25em .4em;
   font-size: 75%;
@@ -9,8 +11,7 @@
   vertical-align: baseline;
   background-color: @muted;
   color: white;
-  border: 2px solid transparent;
-  border-radius: 20px;
+  border-color: transparent;
 
   &.primary {
     background-color: @primary;
