--- a/src/colors.less
+++ b/src/colors.less
@@ -13,6 +13,8 @@
 @danger-light: lighten(@danger, 45%);
 @muted-light: lighten(@muted, 35%);
 
+@white-dark: rgba(0, 0, 0, .03);
+
 @colors: primary, secondary, success, warning, danger, muted;
 
 .make-text-color-classes(@i: length(@colors)) when (@i > 0) {
