Fix @muted-text issue

--- a/src/colors.less
+++ b/src/colors.less
@@ -19,6 +19,7 @@
 @success-text: @primary;
 @warning-text: @primary;
 @danger-text: @primary;
+@muted-text: @primary;
 
 @white-dark: rgba(0, 0, 0, .03);
 
