Shadow issue fixed

--- a/src/buttons.less
+++ b/src/buttons.less
@@ -2,7 +2,7 @@ button, .paper-btn, [type="button"] {
     .shadow;
     align-self:center;
     background:transparent;
-    transition:background-color .1s ease;
+    transition:all .5s ease, background-color .1s ease;
     color: @primary;
     display: inline;
     outline:none;
