--- a/src/forms.less
+++ b/src/forms.less
@@ -1,7 +1,7 @@
 input, select {
     display: block;
     background:transparent;
-    color:#41403E;
+    color:@primary;
     outline:none;
     border-top-left-radius: 255px 15px;
     border-top-right-radius: 15px 225px;
