--- a/src/popovers.less
+++ b/src/popovers.less
@@ -23,8 +23,8 @@
   min-width: 80px;
   font-size: 0.7em;
   text-align: center;
-  color: #fff;
-  background: rgba(0,0,0,0.7);
+  color: @white;
+  background: @white-dark;
   transition: opacity .25s ease-out;
   transform: translateX(-50%) translateY(-100%);
   .border;
