--- a/src/borders.less
+++ b/src/borders.less
@@ -41,7 +41,7 @@
     border: 2px solid @primary;
 }
 .border-white {
-    border-color: #FFF;
+    border-color: @white;
 }
 .border-dotted {
     border-style: dotted;
