--- a/src/code.less
+++ b/src/code.less
@@ -8,7 +8,7 @@ code {
 kbd {
     padding: 2px 4px;
     font-size: 80%;
-    color: #fff;
+    color: @white;
     background-color: @primary;
     border-radius: 3px;
 }
