--- a/src/colors.less
+++ b/src/colors.less
@@ -13,7 +13,9 @@
 @danger-light: lighten(@danger, 45%);
 @muted-light: lighten(@muted, 35%);
 
-@white-dark: rgba(0, 0, 0, .03);
+@white-dark: rgba(0, 0, 0, 0.3);
+@white: rgba(255, 255, 255, 1);
+@main-background: rgba(255, 255, 255, 1);
 
 @colors: primary, secondary, success, warning, danger, muted;
 
