--- a/src/colors.less
+++ b/src/colors.less
@@ -14,6 +14,7 @@
 @muted-light: lighten(@muted, 35%);
 
 @white-dark: rgba(0, 0, 0, 0.3);
+@light-dark: rgba(0, 0, 0, 0.7);
 @white: rgba(255, 255, 255, 1);
 @main-background: rgba(255, 255, 255, 1);
 
