--- a/src/popovers.less
+++ b/src/popovers.less
@@ -25,7 +25,7 @@
     font-size: 0.7em;
     text-align: center;
     color: @white;
-    background: @white-dark;
+    background: @light-dark;
     transition: opacity .25s ease-out;
     transform: translateX(-50%) translateY(-100%);
     .border;
