Added support for textarea

--- a/src/fonts.less
+++ b/src/fonts.less
@@ -10,7 +10,7 @@ html {
     font-family: @body-font, sans-serif;
     color: @font-color;
 }
-p, a, button, table, thead, tbody, th, tr, td, input, select, option {
+p, a, button, table, thead, tbody, th, tr, td, input, textarea, select, option {
     font-family: @body-font, sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
