--- a/src/forms.less
+++ b/src/forms.less
@@ -32,6 +32,12 @@ input, select, textarea {
     .input-block {
         width: 100%;
     }
+
+    textarea{
+        max-width: 100%;
+        max-height: 90vh;
+    }
+
     // TODO: make these classes implicit. We can find out what class to apply based on its type
     .paper-radio, .paper-check {
         display: block;
