Added no-resize class

--- a/src/forms.less
+++ b/src/forms.less
@@ -38,6 +38,10 @@ input, select, textarea {
         max-height: 90vh;
     }
 
+    textarea.no-resize{
+        resize: none;
+    }
+
     // TODO: make these classes implicit. We can find out what class to apply based on its type
     .paper-radio, .paper-check {
         display: block;
