fix position value

--- a/src/forms.less
+++ b/src/forms.less
@@ -53,7 +53,7 @@ input, select {
         input + span:before {
             content: '';
             display: inline-block;
-            position: -.25rem;
+            position: relative;
             width: 1rem;
             height: 1rem;
             border: 2px solid @primary;
