--- a/demo.css
+++ b/demo.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/img/geometry2.png")
+    background-image: url("/img/geometry2.png");
 }
 .demo .row .col {
     background-color: #eee;
