--- a/src/container.less
+++ b/src/container.less
@@ -48,9 +48,9 @@ hr:after {
     box-shadow: -1px 5px 35px -9px hsla(0,0%,0%,.2);
     @media @xsmall-screen {
         padding: 1rem;
+        overflow-wrap: break-word;
         width: 100%;
         margin-top: 0;
         margin-bottom: 0;
     }
 }
-
