--- a/src/navbar.less
+++ b/src/navbar.less
@@ -1,101 +1,68 @@
 @grey_background: #c2c2c2;
-.paper-nav {
-	display: block;
-	margin-top: 0px;
-	margin-left: 0px;
-}
-
-.nav-link-flat {
-	background-image: none;
-	font-style: normal;
-	padding-left: 16px;
-	padding-right: 16px;
-	padding-top: 6px;
-	padding-bottom: 6px;
-	&:hover {
-		background: @grey_background;
-	}
-}
 
 .active {
 	background: @grey_background;
 }
 
-.paper-nav {
-	li {
+nav {
+	display: block;
+	margin-top: 0px;
+	margin-left: 0px;
+	label {
+		display: none;
+	}
+	input {
+		display: none;
+		&:checked {
+			&~ul {
+				display: block;
+			}
+		}
+	}
+	ul {
 		&:not(:first-child) {
-			margin-top: 30px;
+			margin-top: -20px;
+		}
+	}
+	li {
+		font-style: normal;
+		padding-left: 16px;
+		padding-right: 16px;
+		padding-top: 6px;
+		padding-bottom: 6px;
+		display: inline-block;
+		margin-right: 8px;
+		&:hover {
+			background: @grey_background;
 		}
 		&:before {
 			content: "";
 		}
-		display: inline-block;
-		margin-right: 8px;
-	}
-}
-.hidden {
-	display: none;
-}
-.home-icon {
-	&:after {
-		content: "Home";
-	}
-}
-.show-menu {
-	display: none;
-	float: right;
-}
-#show-menu {
-	display: none;
-	&:checked {
-		&~#menu {
-			display: block;
+		a {
+			background-image: none;
 		}
 	}
 }
-#show-menu2 {
-	display: none;
-	&:checked {
-		&~#menu2 {
-			display: block;
-		}
-	}
-}
-@media screen and (max-width : 760px) {
-	.home-icon {
-		background-image: url('../img/home_ic.png');
-		background-repeat: no-repeat;
-		background-position: 4px 4px;
-		width: 64px;
-		background-size: 24px 24px;
-		&:after {
-			white-space: pre;
-			content: "   ";
-		}
-	}
-	.paper-nav {
-		display:none;
-		position: static;
 
-		.flat {
+@media screen and (max-width : 760px) {
+	nav {
+		ul {
+			position: static;
 			&:not(:first-child) {
 				display: none;
 			}
-		}
-		.nav-link-flat {
-			&:not(:first-child) {
-				margin-top: 30px;
+			li {
+				&:not(:first-child) {
+					margin-top: 30px;
+				}
+				float: none;
+	      display: block;
+	      text-align: left;
+				margin-bottom: 1px;
 			}
-			float: none;
-      display: block;
-      text-align: left;
 		}
-		li {
-			margin-bottom: 1px;
+		label {
 			display: block;
 		}
-	}
-	.show-menu {
-		display: block;
 	}
 }
