--- a/src/buttons.less
+++ b/src/buttons.less
@@ -27,6 +27,10 @@ button, .paper-btn, input[type="button"] {
     &:hover{
         .shadow-hover;
     }
+    :active {
+      border-color: hsla(0,0%,0%,.2);
+      transition: none;
+    }
     &.disabled, &[disabled]{
         .disabled;
     }
