--- a/src/buttons.less
+++ b/src/buttons.less
@@ -27,7 +27,7 @@ button, .paper-btn, input[type="button"] {
     &:hover{
         .shadow-hover;
     }
-    :active {
+    &:active {
       border-color: hsla(0,0%,0%,.2);
       transition: none;
     }
