--- a/src/tables.less
+++ b/src/tables.less
@@ -14,6 +14,14 @@ table {
         vertical-align: top;
         border-top: 1px dashed lighten(@primary, 60%);
     }
+    @media screen and (max-width:480px) {
+        thead tr th {
+            padding: 2%;
+        }
+        tbody tr td {
+            padding: 2%;
+        }
+      }
     &.table-hover tbody tr:hover {
         color: @secondary;
     }
