--- a/src/buttons.less
+++ b/src/buttons.less
@@ -27,6 +27,12 @@ button, .paper-btn, input[type="button"] {
     &:hover{
         .shadow-hover;
     }
+    &:focus{
+        border: 2px solid @secondary;
+        -webkit-box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+        -moz-box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+        box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+    }
     &.disabled, &[disabled]{
         .disabled;
     }
