Change the display of focused buttons
This will visually update the display of focused buttons so that users
using a keyboard will differenciate them from other buttons.

--- a/src/buttons.less
+++ b/src/buttons.less
@@ -30,6 +30,12 @@ button, .paper-btn, [type="button"] {
     &:hover {
         .shadow-hover;
     }
+    &:focus{
+        border: 2px solid @secondary;
+        -webkit-box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+        -moz-box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+        box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+    }
     &:active {
       border-color: hsla(0,0%,0%,.2);
       transition: none;
