Adding a back to top button feature

--- a/src/styles.less
+++ b/src/styles.less
@@ -17,3 +17,4 @@
 @import (less) "./cards.less";
 @import (less) "./badges.less";
 @import (less) "./alerts.less";
+@import (less) "./back2top.less";
