Changing color to variable

--- a/src/container.less
+++ b/src/container.less
@@ -39,7 +39,7 @@ hr:after {
 }
 .paper {
     border: 1px solid @primary-light;
-    background-color: #FFF;
+    background-color: @white;
     padding: 2rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
