--- a/src/popovers.less
+++ b/src/popovers.less
@@ -23,7 +23,7 @@
   min-width: 80px;
   font-size: 0.7em;
   text-align: center;
-  color: #fff;
+  color: @white;
   background: rgba(0,0,0,0.7);
   transition: opacity .25s ease-out;
   transform: translateX(-50%) translateY(-100%);
