Added loop for dynamic selection of tabs id

--- a/src/tabs.less
+++ b/src/tabs.less
@@ -27,11 +27,12 @@
         border-bottom: solid 3px @secondary;
     }
 
-    #tab1:checked~#content1,
-    #tab2:checked~#content2,
-    #tab3:checked~#content3,
-    #tab4:checked~#content4 {
-        display: block;
+    .loop(@num) when (@num > 0) {
+        .loop((@num - 1));
+        input[id^= ~"tab@{num}"]:checked~div[id^= ~"content@{num}"]{
+            display:block;
+        }
     }
-
+    
+    .loop(5);
 }
