fix for pre code tags

--- a/src/code.less
+++ b/src/code.less
@@ -26,3 +26,11 @@ pre {
     overflow-x: auto;
     white-space: pre-wrap;
 }
+pre code{
+    color: inherit;
+    background: transparent;
+    white-space: pre;
+    margin-top: -1.50em;
+    display: block;
+    font-size: inherit;
+}
