added word wrap

--- a/src/code.less
+++ b/src/code.less
@@ -29,8 +29,12 @@ pre {
 pre code{
     color: inherit;
     background: transparent;
-    white-space: pre;
     margin-top: -1.50em;
     display: block;
     font-size: inherit;
+    padding: initial;
+    white-space:pre;
+    white-space:pre-wrap;
+    word-break:break-all;
+    word-wrap:break-word;
 }
