Each file should import its dependent file(s) if using vars or classes from them

--- a/src/fonts.less
+++ b/src/fonts.less
@@ -1,7 +1,9 @@
+@import './colors.less';
+
 @import url('https://fonts.googleapis.com/css?family=Neucha|Patrick+Hand+SC');
 
 @global-font-size: 20px;
-@header-font: 'Patrick Hand SC'; 
+@header-font: 'Patrick Hand SC';
 @body-font: 'Neucha';
 @font-color: @primary;
 
