--- a/src/buttons.less
+++ b/src/buttons.less
@@ -1,3 +1,8 @@
+@import './colors.less';
+@import './shadows.less';
+@import './borders.less';
+@import './forms.less'; // .disabled
+
 button, .paper-btn, [type="button"] {
     .shadow;
     align-self:center;
