--- a/src/container.less
+++ b/src/container.less
@@ -1,3 +1,5 @@
+@import './colors.less';
+
 @large-screen: ~"screen and (max-width: 1200px)";
 @medium-screen: ~"screen and (max-width: 992px)";
 @small-screen: ~"screen and (max-width: 768px)";
@@ -53,4 +55,3 @@ hr:after {
         margin-bottom: 0;
     }
 }
-
