Added overflow scroll for code

--- a/src/code.less
+++ b/src/code.less
@@ -33,7 +33,7 @@ pre code{
     display: block;
     font-size: inherit;
     padding: initial;
-    white-space:pre-wrap;
+    white-space:pre;
     word-break:break-all;
     word-wrap:break-word;
 }
