pre-wrap --> pre

--- a/src/code.less
+++ b/src/code.less
@@ -24,7 +24,7 @@ pre {
     border: 1px solid lighten(@primary, 50%);
     border-radius: 3px;
     overflow-x: auto;
-    white-space: pre-wrap;
+    white-space: pre;
 }
 pre code{
     color: inherit;
