--- a/src/tabs.less
+++ b/src/tabs.less
@@ -1,3 +1,5 @@
+@import './colors.less';
+
 .tabs {
     .content {
         display: none;
@@ -33,6 +35,6 @@
             display:block;
         }
     }
-    
+
     .loop(5);
 }
