Added normalize.less fix #26 also export it in dist/components

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,5 @@
+@import (less) "./normalize.less";
 @import (less) "./boxreset.less";
-@import (less) "../node_modules/normalize.css/normalize.css";
 @import (less) "./colors.less";
 @import (less) "./fonts.less";
 @import (less) "./borders.less";
