Mobile support for chrome

--- a/demo.css
+++ b/demo.css
@@ -14,3 +14,7 @@ body {
 .summary a {
     color: #41403e;    
 }
+img.no-responsive{
+    max-width: -webkit-fill-available;
+    max-width: -moz-available;
+}
