--- a/src/borders.scss
+++ b/src/borders.scss
@@ -1,7 +1,7 @@
 @import './colors.less';
 
 .border {
-    border: 2px solid @primary;
+    border: 2px solid $primary;
 }
 .border, .border-1, .child-borders > *:nth-child(6n+1) {
     border-top-left-radius: 255px 15px;
@@ -40,10 +40,10 @@
     border-bottom-left-radius: 15px 225px;
 }
 .child-borders > * {
-    border: 2px solid @primary;
+    border: 2px solid $primary;
 }
 .border-white {
-    border-color: @white;
+    border-color: $white;
 }
 .border-dotted {
     border-style: dotted;
@@ -55,12 +55,13 @@
     border-width: 5px;
 }
 
-.make-border-color-classes(@i: length(@colors)) when (@i > 0) {
-    .make-border-color-classes(@i - 1);
-    @color: extract(@colors, @i);
-    .border-@{color} {
-        border-color: @@color;
+@mixin make-border-color-classes($i: length($colors)) when ($i > 0)
+{
+    @include make-border-color-classes($i - 1);
+    $color: extract($colors, $i);
+    .border-${color} {
+        border-color: $$color;
     }
 }
 
-.make-border-color-classes();
+@include make-border-color-classes();
