--- a/src/container.scss
+++ b/src/container.scss
@@ -1,25 +1,26 @@
 @import './colors.less';
 
-@large-screen: ~"screen and (max-width: 1200px)";
-@medium-screen: ~"screen and (max-width: 992px)";
-@small-screen: ~"screen and (max-width: 768px)";
-@xsmall-screen: ~"screen and (max-width: 480px)";
+$large-screen: #{"screen and (max-width: 1200px)"};
+$medium-screen: #{"screen and (max-width: 992px)"};
+$small-screen: #{"screen and (max-width: 768px)"};
+$xsmall-screen: #{"screen and (max-width: 480px)"};
 
 .container {
     width: 100%;
     max-width: 960px;
     position: relative;
     margin: 0 auto;
-    @media @medium-screen {
+    @media $medium-screen {
         width: 85%;
     }
-    @media @xsmall-screen {
+    @media $xsmall-screen {
         width: 90%;
     }
 }
-.hr-after() {
+@mixin hr-after()
+{
     text-align: center;
-    color: lighten(@primary, 30%);
+    color: lighten($primary, 30%);
     display: block;
     content: "~~~";
     position: relative;
@@ -41,15 +42,15 @@ hr:after {
     top: -.75rem;
 }
 .paper {
-    border: 1px solid @primary-light;
-    background-color: @main-background;
+    border: 1px solid $primary-light;
+    background-color: $main-background;
     padding: 2rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
     -webkit-box-shadow: -1px 5px 35px -9px hsla(0,0%,0%,.2);
     -moz-box-shadow: -1px 5px 35px -9px hsla(0,0%,0%,.2);
     box-shadow: -1px 5px 35px -9px hsla(0,0%,0%,.2);
-    @media @xsmall-screen {
+    @media $xsmall-screen {
         padding: 1rem;
         width: 100%;
         margin-top: 0;
