--- a/src/cards.scss
+++ b/src/cards.scss
@@ -9,20 +9,20 @@
   display: flex;
   flex-direction: column;
   word-wrap: break-word;
-  border: 2px solid @muted-light;
+  border: 2px solid $muted-light;
 
   .card-header,
   .card-footer {
     padding: .75rem 1.25rem;
-    background-color: @white-dark;
+    background-color: $white-dark;
   }
 
   .card-header {
-    border-bottom: 2px solid @muted-light;
+    border-bottom: 2px solid $muted-light;
   }
 
   .card-footer {
-    border-top: 2px solid @muted-light;
+    border-top: 2px solid $muted-light;
   }
 
   .card-body {
