--- a/src/code.scss
+++ b/src/code.scss
@@ -3,15 +3,15 @@
 code {
     padding: 2px 4px;
     font-size: 80%;
-    color: @secondary;
-    background-color: lighten(@primary, 70%);
+    color: $secondary;
+    background-color: lighten($primary, 70%);
     border-radius: 3px;
 }
 kbd {
     padding: 2px 4px;
     font-size: 80%;
-    color: @white;
-    background-color: @primary;
+    color: $white;
+    background-color: $primary;
     border-radius: 3px;
 }
 pre {
@@ -19,11 +19,11 @@ pre {
     padding: 1em;
     font-size: 80%;
     line-height: 1.5;
-    color: @primary;
+    color: $primary;
     word-break: break-all;
     word-wrap: break-word;
-    background-color: lighten(@primary, 73%);
-    border: 1px solid lighten(@primary, 50%);
+    background-color: lighten($primary, 73%);
+    border: 1px solid lighten($primary, 50%);
     border-radius: 3px;
     overflow-x: auto;
     white-space: pre;
