--- a/src/flexbox.scss
+++ b/src/flexbox.scss
@@ -1,39 +1,43 @@
-@columnNames: col, sm, md, lg;
-@columnSizes: 0px, 768px, 992px, 1200px;
+$columnNames: col, sm, md, lg;
+$columnSizes: 0px, 768px, 992px, 1200px;
 
-@numberOfColumns: 12;
+$numberOfColumns: 12;
 
-.make-column-class(@name, @size, @n, @p: 1) when (@p =< @n) {
-    @percent: (@p * 100% / @n);
-        .@{name}-@{p} {
-            .col-size(@percent);
+@mixin make-column-class($name, $size, $n, $p: 1) when ($p =< $n)
+{
+    $percent: ($p * 100% / $n);
+        .${name}-${p} {
+            @include col-size($percent);
         }
 
-    .make-column-class(@name, @size, @n, (@p + 1));
+    @include make-column-class($name, $size, $n, ($p + 1));
 }
 
-.make-column-classes(@n, @j: 1) when (@j =< length(@columnNames)) {
-    @columnName: extract(@columnNames, @j);
-    @columnSize: extract(@columnSizes, @j);
-    @media (min-width: @columnSize) {
-        .make-column-class(@columnName, @columnSize, @n);
+@mixin make-column-classes($n, $j: 1) when ($j =< length($columnNames))
+{
+    $columnName: extract($columnNames, $j);
+    $columnSize: extract($columnSizes, $j);
+    @media (min-width: $columnSize) {
+        @include make-column-class($columnName, $columnSize, $n);
     }
 
-    .make-column-classes(@n, @j + 1);
+    @include make-column-classes($n, $j + 1);
 }
 
-.center-all() {
+@mixin center-all()
+{
     -webkit-align-items: center;
             align-items: center;
     -webkit-justify-content: center;
             justify-content: center;
 }
-.col-size(@percent) {
+@mixin col-size($percent)
+{
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 @percent;
-    -ms-flex: 0 0 @percent;
-    flex: 0 0 @percent;
-    max-width: @percent;
+    -webkit-flex: 0 0 $percent;
+    -ms-flex: 0 0 $percent;
+    flex: 0 0 $percent;
+    max-width: $percent;
 }
 .row {
     margin-right: auto;
@@ -94,14 +98,14 @@
     padding: 1rem;
     @media (max-width: 767px) {
         // Stack for mobile
-        .col-size(100%);
+        @include col-size(100%);
     }
 }
 .col-fill {
     width: auto;
     flex: 1 1 0px;
 }
-.make-column-classes(@numberOfColumns);
+@include make-column-classes($numberOfColumns);
 .align-top {
     -webkit-align-self: flex-start;
     -ms-flex-item-align: start;
