--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -2,21 +2,21 @@
 
 @import url('https://fonts.googleapis.com/css?family=Neucha|Patrick+Hand+SC');
 
-@global-font-size: 20px;
-@header-font: 'Patrick Hand SC';
-@body-font: 'Neucha';
-@font-color: @primary;
+$global-font-size: 20px;
+$header-font: 'Patrick Hand SC';
+$body-font: 'Neucha';
+$font-color: $primary;
 
 html {
-    font-size: @global-font-size;
-    font-family: @body-font, sans-serif;
-    color: @font-color;
+    font-size: $global-font-size;
+    font-family: $body-font, sans-serif;
+    color: $font-color;
 }
 p, a, button, table, thead, tbody, th, tr, td, input, textarea, select, option {
-    font-family: @body-font, sans-serif;
+    font-family: $body-font, sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: @header-font, sans-serif;
+    font-family: $header-font, sans-serif;
     font-weight: normal;
 }
 h1 {
