--- a/src/tables.scss
+++ b/src/tables.scss
@@ -14,7 +14,7 @@ table {
         padding: 8px;
         line-height: 1.5;
         vertical-align: top;
-        border-top: 1px dashed lighten(@primary, 60%);
+        border-top: 1px dashed lighten($primary, 60%);
     }
     @media screen and (max-width:480px) {
         thead tr th {
@@ -25,9 +25,9 @@ table {
         }
       }
     &.table-hover tbody tr:hover {
-        color: @secondary;
+        color: $secondary;
     }
     &.table-alternating tbody tr:nth-of-type(even) {
-        color: lighten(@primary, 25%);
+        color: lighten($primary, 25%);
     }
 }
