--- a/src/tabs.scss
+++ b/src/tabs.scss
@@ -16,25 +16,26 @@
         padding: 0.75rem 0.75rem;
         font-weight: 600;
         text-align: center;
-        color: @primary-light;
+        color: $primary-light;
     }
 
     label:hover {
-        color: @muted;
+        color: $muted;
         cursor: pointer;
     }
 
     input:checked+label {
-        color: @primary;
-        border-bottom: solid 3px @secondary;
+        color: $primary;
+        border-bottom: solid 3px $secondary;
     }
 
-    .loop(@num) when (@num > 0) {
-        .loop((@num - 1));
-        input[id = ~"tab@{num}"]:checked~div[id = ~"content@{num}"]{
+    @mixin loop($num) when ($num > 0)
+{
+        @include loop(($num - 1));
+        input[id = #{"tab${num}"]:checked~div[id = ~"content${num}"}]{
             display:block;
         }
     }
 
-    .loop(5);
+    @include loop(5);
 }
